# Mp3tagQt

./: .gitignore  CMakeLists.txt  Makefile  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaplayer.cpp  mediaplayer.h  settingsdialog.cpp  settingsdialog.h
